# doughy

./: .gitignore  README.md  config.example.yaml  pyproject.toml
docs/: proofing-chamber.md  shopping-list.md  wiring.md
doughy/: __main__.py  cli.py  config.py  controller.py  db.py  runner.py
doughy/hardware/: __init__.py  base.py  mock.py
systemd/: doughy.service
tests/: test_config.py  test_controller.py  test_db.py  test_runner.py
